# scaffold

./: scaffold.cabal  test.conf
exe/: scaffold.hs
lib/Application/Scaffold/: Command.hs  Config.hs  Job.hs  Type.hs
lib/Application/Scaffold/Generate/: Darcs.hs  NewApp.hs  YesodCrud.hs
template/: LICENSE-MIT.st
template/analysis/: analysis.hs  analysis2.hs
template/application/: Command.hs.st  Job.hs.st  ProgType.hs.st  Type.hs.st  project.hs.st
template/licenses/: LICENSE-BSD3.st
template/yesodcrud/client/: Command.hs.st  Config.hs.st  Job.hs.st  ProgType.hs.st  cabalfile.cabal.st  client.hs.st
template/yesodcrud/server/: Type.hs.st  Yesod.hs.st  cabalfile.cabal.st  server.hs.st
template/yesodcrud/type/: Type.hs.st  cabalfile.cabal.st
