Name:		scaffold
Version:	0.2.999 
Synopsis:	Scaffolding various projects
Description: 	Scaffolding various projects
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
                template/Setup.lhs
                template/licenses/*.st 
                template/application/*.hs.st
                template/cabal/*.cabal.st
                template/analysis/analysis.hs
                template/yesodcrud/server/*.hs.st
                template/yesodcrud/server/*.cabal.st
                template/yesodcrud/client/*.hs.st
                template/yesodcrud/client/*.cabal.st
                template/yesodcrud/type/*.hs.st
                template/yesodcrud/type/*.cabal.st

Executable scaffold
  Main-is: scaffold.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, directory, filepath>1,  
                 HStringTemplate, HStringTemplateHelpersIW, parsec, 
                 cmdargs, scaffold

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 mtl == 2.*, 
                 directory, 
                 filepath>1, 
                 process,
                 HStringTemplate,  
                 -- HStringTemplateHelpersIW, 
                 parsec, 
                 cmdargs == 0.9.*, 
                 devadmin >= 0.4.1 && < 0.5,  
                 configurator == 0.2.*,
                 split 
  Exposed-Modules: 
                 Application.Scaffold.Type
                 Application.Scaffold.Command
                 Application.Scaffold.Job
                 Application.Scaffold.Config
                 Application.Scaffold.Generate.Darcs
                 Application.Scaffold.Generate.NewApp
                 Application.Scaffold.Generate.YesodCrud

  Other-Modules: 
                 Paths_scaffold
 
		 
